k8s/Polybot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: polybot-certs
          secret:
            secretName: polybot-tls
      containers:
        - name: polybot
          image: guymeltzer/polybot:1.0.103
          ports:
            - containerPort: 30619
          volumeMounts:
            - name: polybot-certs
              mountPath: "/app/certs"
              readOnly: true
          env:
            - name: TELEGRAM_TOKEN
              valueFrom:
                secretKeyRef:
                  name: telegram-secret
                  key: token
            - name: MONGO_URI
              value: "mongodb://mongodb-0.mongodb.mongodb.svc.cluster.local:27017,mongodb-1.mongodb.mongodb.svc.cluster.local:27017,mongodb-2.mongodb.mongodb.svc.cluster.local:27017/?replicaSet=rs0"

            - name: TELEGRAM_APP_URL
              valueFrom:
                secretKeyRef:
                  name: telegram-app-url-secret
                  key: TELEGRAM_APP_URL
            # AWS Secrets Manager will be used in the application code
