k8s/Polybot/resource-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-consumer
  namespace: default
spec:
  replicas: 3  # Small enough to fit on 1-2 nodes
  selector:
    matchLabels:
      app: resource-consumer
  template:
    metadata:
      labels:
        app: resource-consumer
    spec:
      containers:
        - name: resource-consumer
          image: k8s.gcr.io/ubuntu-slim:0.1
          resources:
            requests:
              cpu: 800m  # Slightly more than half a t3.medium’s 2 vCPUs
              memory: 1Gi  # Fits within t3.medium’s 4GiB RAM
          command: ["sh", "-c", "while true; do sleep 10; done"]
