k8s/Polybot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 31024
      targetPort: 31024
      protocol: TCP
  selector:
    app: polybot
